--- a/lib/src/dashboard_component/setting_component/user_account_component/user_account_component.html
+++ b/lib/src/dashboard_component/setting_component/user_account_component/user_account_component.html
@@ -134,6 +134,7 @@
         </div>
     </div>
 </div>-->
+<alert [alert]="setAlert" *ngIf="setAlert != null"></alert>
 <div class="w-100 p-0 m-0">
     <div class="m-0 m-md-5 p-2 p-md-5 box-one br-20 user-section shadow">
         <div class="row w-100 mx-0 mb-5 p-0">
